// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component Profile Profile renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 20,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/ProfileDefault.png",
        }
      }
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    />
    <View
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000",
            "fontFamily": "Inter-Semi-bold",
            "fontSize": 14,
          }
        }
      >
        ayaka_kaminari
      </Text>
      <Text
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Regular",
            "fontSize": 13,
          }
        }
      >
        35d ego . 
        <Icon
          name="globe-outline"
        />
         . 
        <Icon
          name="stopwatch"
        />
         cambrid
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Icon
      name="dots-three-horizontal"
      size={20}
    />
  </View>
</View>
`;

exports[`component Profile Profile snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 20,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/ProfileDefault.png",
        }
      }
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    />
    <View
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000",
            "fontFamily": "Inter-Semi-bold",
            "fontSize": 14,
          }
        }
      >
        ayaka_kaminari
      </Text>
      <Text
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Regular",
            "fontSize": 13,
          }
        }
      >
        35d ego . 
        <Icon
          name="globe-outline"
        />
         . 
        <Icon
          name="stopwatch"
        />
         cambrid
      </Text>
    </View>
  </View>
  <ForwardRef>
    <Icon
      name="dots-three-horizontal"
      size={20}
    />
  </ForwardRef>
</View>
`;
